# glipmath

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  GEMINI.md  README.md  glipmath.toml  preview_html_pages.py  pyproject.toml  requirements.txt  run_streamlit.ps1  run_terraform.ps1
.streamlit/: config.toml  example_secrets.toml  secrets.toml.example
app/: __init__.py  streamlit_app.py
data/: vestibulinho_questions.csv
docs/: architecture.md  data_model.md  deployment_cloud_run.md  deployment_streamlit_cloud.md  gemini_enrichment.md  google_auth_setup.md  google_setup_manual_steps.md  manual_bootstrap_steps.md  mvp_scope.md  terraform_infra.md
local/: run_streamlit.ps1
modules/: __init__.py
scripts/: apply_question_seed_jsons.py  backfill_local_dev_data.py  bigquery_seed_utils.py  bootstrap_streamlit_secrets.py  enrich_question_explanations.py  inspect_answers.py  load_question_bank_to_bigquery.py  load_whitelist_to_bigquery.py  normalize_question_taxonomy.py  question_seed_ids.py  render_question_seed_sql.py  seed_local_csv_examples.py  validate_question_bank.py
templates/: glipmath_answered_screen_mockup (1).html  preview.html
tests/: __init__.py  conftest.py  preview_html_pages.py  test_answer_repository.py  test_answer_service.py  test_app_html_rendering.py  test_apply_question_seed_jsons.py  test_authorization_service.py  test_bigquery_client.py  test_explanation_service.py  test_gemini_client.py  test_html_preview.py  test_leaderboard_service.py  test_logging_utils.py  test_main_page_flow.py  test_markdown_renderer.py  test_normalization.py  (+20 more)
(+100 files in other folders)
